# agent-md

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LINTING.md  README-vi.md  README.md  debug-comprehensive.md  debug-test.md  implementation-notes.md  rustfmt.toml  tasks.md  test_bold_in_code_blocks.md
.github/workflows/: ci.yml.txt
.opencode/rules/: agent-md.md
.windsurf/rules/: agent-md.md
.windsurf/workflows/: agent-md-project-guide.md
agent-md/: .pre-commit-config.yaml  Cargo.toml
agent-md/src/: main.rs
docs/: DEV.md  llm-agent-integration-skill.md  llm-agent-rule.md  markdown-writing-rules.md
docs/blogs/: intro.md
ralph-md/: Cargo.toml  LINTING.md  Makefile  README.md  clippy.toml
ralph-md/src/: main.rs
src/: commands.rs  format.rs  html_tests.rs  linter.rs  main.rs  parser.rs  tests.rs  types.rs
src/format/: blockquotes.rs  bold_tables.rs  code_blocks.rs  frontmatter.rs  io.rs  lines.rs  mod.rs  options.rs  tables.rs  tests.rs
src/rules/: code_blocks.rs  heading_structure.rs  list_formatting.rs  mod.rs  (+6 more)
test-md/: README.md  basic.md  debug-comprehensive.md  debug-edge-cases.md  fmt-table-header-body.md  format-all.md  format-options-sample-code-block.md  test-bold.md  test-clean.md  test-fmt-blockquote-list.md  test-fmt-bold.md  test-fmt-codeblock.md  test-graph-folder.md  test-graph.md  test-lint.md  test-perfect.md  test-simple.md  test-space-indentation.md  test-table-rows-spaces.md  test-table-rows.md  test-table.md
vscode-extension/: CHANGELOG.md  DEV.md  LICENSE  README.md  package.json  tsconfig.json
(+8 files in other folders)
