[package]
name = "agent-md"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"

[profile.release]
strip = true
lto = true
opt-level = "z"

[[bin]]
name = "agent-md"
path = "src/main.rs"